basic swagger rest documentation
